GearsetPOC/force-app/main/default/objects/Vendor_Category__c/Vendor_Category__c.object-meta.xml
<CustomObject>
    <description>Category for Vendor management</description>
    <label>Vendor_Category</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor_Categorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>