GearsetPOC/force-app/main/default/objects/Vendor_Category__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>Approver</description>
    <inlineHelpText>Approver</inlineHelpText>
    <label>Approver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>