GearsetPOC/force-app/main/default/objects/Vendor_Category__c/fields/ApproverEmail__c.field-meta.xml
<CustomField>
    <fullName>ApproverEmail__c</fullName>
    <description>Approver Email</description>
    <inlineHelpText>Approver Email</inlineHelpText>
    <label>ApproverEmail</label>
    <type>Email</type>
</CustomField>