GearsetPOC/force-app/main/default/objects/Vendor_Category__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <description>Category Code</description>
    <inlineHelpText>Category Code</inlineHelpText>
    <label>Category_Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>