GearsetPOC/force-app/main/default/objects/Vendor_Category__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Category Type</description>
    <inlineHelpText>Category Type</inlineHelpText>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>