GearsetPOC/force-app/main/default/objects/Vendor_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category_Code__c</columns>
    <columns>Approver__c</columns>
    <columns>ApproverEmail__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>